--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -11,7 +11,7 @@ spring:
     enabled: false
   datasource:
     hikari:
-      pool-name: grad-trax-api-cp
+      pool-name: educ-grad-trax-api-cp
       maximum-pool-size: ${MAXIMUM_POOL_SIZE}
       connection-timeout: ${CONNECTION_TIMEOUT}
       max-lifetime: ${MAX_LIFETIME}
@@ -82,5 +82,5 @@ springdoc:
 
 #Endpoints
 endpoint: 
- grad-trax-api:
+  grad-trax-api:
 
