Fixed the Junit tests.
Fixed the Junit tests.

--- a/api/src/test/resources/application.yaml
+++ b/api/src/test/resources/application.yaml
@@ -57,10 +57,12 @@ cron:
     process:
       events:
         stan:
-          run: 0 0/1 * * * *
+          run: 0 0/5 * * * *
           lockAtLeastFor: 800ms
           lockAtMostFor: 900ms
-
+      jobs:
+        stan:
+          run: 0 0/10 * * * *
 #Incremental Trax Update
 trax:
   update:
