--- a/api/src/test/resources/application.yaml
+++ b/api/src/test/resources/application.yaml
@@ -9,6 +9,7 @@ spring:
       connection-timeout: 6000
       max-lifetime: 600000
     driver-class: org.h2.Driver
+    url: jdbc:h2:mem:test;INIT=CREATE SCHEMA IF NOT EXISTS shedlock;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
