Revert "Update api_ci.yml"
This reverts commit d0bdc4d6fa0105bbb1aa15bb818cffcc821a88ca.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,15 @@
-name: API CI
+name: Build
 on:
   push:
     branches:
-      - main
-      - release/*
+      - main # or the name of your main branch
   pull_request:
     branches:
       - main
       - release/*
-    paths:
-      - 'api/**'
 jobs:
-  quality_profile:
-    name: Build and test
+  build:
+    name: Build
     runs-on: ubuntu-latest
     defaults:
       run:
