--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -18,7 +18,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  openshift-ci-cd:
+  deploy-test:
     name: Deploy to OpenShift TEST
     # ubuntu-20.04 can also be used.
     runs-on: ubuntu-18.04
