Make Splunk logging optional in openshift.
Updates to make Splunk logging optional in openshift.

--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -110,3 +110,8 @@ cron:
 trax:
   update:
     enabled: ${ENABLE_TRAX_UPDATE}
+
+#Splunk LogHelper
+splunk:
+  log-helper:
+    enabled: ${ENABLE_SPLUNK_LOG_HELPER}
