--- a/.github/workflows/build_from.main.branch.deploy.to.dev.yml
+++ b/.github/workflows/build_from.main.branch.deploy.to.dev.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy to DEV
+name: Build & Deploy to DEV from Release Branch
 
 env:
   # 🖊️ EDIT your repository secrets to log into your OpenShift cluster and set up the context.
@@ -38,7 +38,9 @@ jobs:
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          ref: grad-release
 
       - name: Determine image tags
         if: env.TAG == ''
