--- a/.github/workflows/build_from.main.branch.deploy.to.dev.yml
+++ b/.github/workflows/build_from.main.branch.deploy.to.dev.yml
@@ -110,3 +110,8 @@ jobs:
           oc logs -f dc/${{ env.SPRING_BOOT_IMAGE_NAME }}
           # Get status, returns 0 if rollout is successful
           oc rollout status dc/${{ env.SPRING_BOOT_IMAGE_NAME }}
+
+#      - name: ZAP Scan
+#        uses: zaproxy/action-api-scan@v0.1.0
+#        with:
+#         target: 'https://${{ env.REPO_NAME }}-${{ env.OPENSHIFT_NAMESPACE }}-dev.apps.silver.devops.gov.bc.ca/api/v1/api-docs'
