--- a/.github/workflows/build_from.release.branch.deploy.to.dev.yml
+++ b/.github/workflows/build_from.release.branch.deploy.to.dev.yml
@@ -1,6 +1,7 @@
 name: Build & Deploy to DEV from main branch
 
 env:
+
   # 🖊️ EDIT your repository secrets to log into your OpenShift cluster and set up the context.
   # See https://github.com/redhat-actions/oc-login#readme for how to retrieve these values.
   # To get a permanent token, refer to https://github.com/redhat-actions/oc-login/wiki/Using-a-Service-Account-for-GitHub-Actions
@@ -108,3 +109,8 @@ jobs:
           oc logs -f dc/${{ env.SPRING_BOOT_IMAGE_NAME }}
           # Get status, returns 0 if rollout is successful
           oc rollout status dc/${{ env.SPRING_BOOT_IMAGE_NAME }}
+
+#      - name: ZAP Scan
+#        uses: zaproxy/action-api-scan@v0.1.0
+#        with:
+#         target: 'https://${{ env.REPO_NAME }}-${{ env.OPENSHIFT_NAMESPACE }}-dev.apps.silver.devops.gov.bc.ca/api/v1/api-docs'
