--- a/tools/openshift/api.dc.yaml
+++ b/tools/openshift/api.dc.yaml
@@ -66,7 +66,13 @@ objects:
                     name: educ-grad-nats-messaging-config-map
                 - secretRef:
                     name: api-grad-trax-db-secret
-              resources: {}
+              resources:
+                requests:
+                  cpu: "50m"
+                  #memory: "50Mi"
+                limits:
+                  cpu: "100m"
+                  #memory: "100Mi"
             - image: docker-remote.artifacts.developer.gov.bc.ca/fluent/fluent-bit:1.5.7
               name: "${REPO_NAME}-fluent-bit-sidecar"
               imagePullPolicy: Always
