--- a/api/src/test/resources/application.yaml
+++ b/api/src/test/resources/application.yaml
@@ -80,3 +80,9 @@ trax:
 splunk:
   log-helper:
     enabled: false
+
+#Endpoint properties
+endpoint:
+  educ-school-api:
+    get-school-by-mincode:
+      url: https://school-api-75e61b-dev.apps.silver.devops.gov.bc.ca/api/v1/schools/%s
