--- a/api/pom.xml
+++ b/api/pom.xml
@@ -24,7 +24,9 @@
         </sonar.exclusions>
         <sonar.coverage.exclusions>
             src/main/java/ca/bc/gov/educ/api/trax/messaging/**,
-            src/main/java/ca/bc/gov/educ/api/trax/scheduler/**
+            src/main/java/ca/bc/gov/educ/api/trax/scheduler/**,
+            src/main/java/ca/bc/gov/educ/api/trax/model/**,
+            src/main/java/ca/bc/gov/educ/api/trax/util/**
         </sonar.coverage.exclusions>
         <java.version>11</java.version>
         <maven.compiler.version>3.10.1</maven.compiler.version>
