--- a/api/pom.xml
+++ b/api/pom.xml
@@ -22,18 +22,17 @@
             src/main/java/ca/bc/gov/educ/api/trax/model/**,
             src/main/java/ca/bc/gov/educ/api/trax/util/**
         </sonar.exclusions>
-        <sonar.coverage.exclusions>
+        <sonar.junit.exclusions>
             src/main/java/ca/bc/gov/educ/api/trax/messaging/**,
             src/main/java/ca/bc/gov/educ/api/trax/scheduler/**,
             src/main/java/ca/bc/gov/educ/api/trax/model/**,
             src/main/java/ca/bc/gov/educ/api/trax/util/**
-        </sonar.coverage.exclusions>
+        </sonar.junit.exclusions>
         <java.version>11</java.version>
         <maven.compiler.version>3.10.1</maven.compiler.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
-        <junit>4.12</junit>
         <springdoc.version>1.6.9</springdoc.version>
         <shedlock.version>4.20.0</shedlock.version>
         <nats.version>2.11.0</nats.version>
@@ -245,7 +244,7 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
-                        <skipTests>true</skipTests>
+                        <skipTests>false</skipTests>
                         <forkCount>1</forkCount>
                         <reuseForks>true</reuseForks>
                         <useSystemClassLoader>false</useSystemClassLoader>
