--- a/api/src/test/resources/application.yaml
+++ b/api/src/test/resources/application.yaml
@@ -30,6 +30,9 @@ spring:
         jwt:
           issuer-uri: https://soam-dev.apps.silver.devops.gov.bc.ca/auth/realms/master
           jwk-set-uri: https://soam-dev.apps.silver.devops.gov.bc.ca/auth/realms/master/protocol/openid-connect/certs
+  sql:
+    init:
+      data-locations: classpath:schema.sql
 
 #Logging properties
 logging:
