--- a/api/pom.xml
+++ b/api/pom.xml
@@ -20,13 +20,17 @@
             src/main/java/ca/bc/gov/educ/api/trax/choreographer/**,
             src/main/java/ca/bc/gov/educ/api/trax/exception/**,
             src/main/java/ca/bc/gov/educ/api/trax/model/**,
-            src/main/java/ca/bc/gov/educ/api/trax/util/**
+            src/main/java/ca/bc/gov/educ/api/trax/util/**,
+            src/main/java/ca/bc/gov/educ/api/trax/repository/TraxSchoolSearchCriteria,
+            src/main/java/ca/bc/gov/educ/api/trax/repository/TraxSchoolSearchSpecification
         </sonar.exclusions>
         <sonar.junit.exclusions>
             src/main/java/ca/bc/gov/educ/api/trax/messaging/**,
             src/main/java/ca/bc/gov/educ/api/trax/scheduler/**,
             src/main/java/ca/bc/gov/educ/api/trax/model/**,
-            src/main/java/ca/bc/gov/educ/api/trax/util/**
+            src/main/java/ca/bc/gov/educ/api/trax/util/**,
+            src/main/java/ca/bc/gov/educ/api/trax/repository/TraxSchoolSearchCriteria,
+            src/main/java/ca/bc/gov/educ/api/trax/repository/TraxSchoolSearchSpecification
         </sonar.junit.exclusions>
         <java.version>11</java.version>
         <maven.compiler.version>3.10.1</maven.compiler.version>
