--- a/tools/openshift/api.dc.yaml
+++ b/tools/openshift/api.dc.yaml
@@ -73,7 +73,7 @@ objects:
                 limits:
                   cpu: "1500m"
                   memory: "4096Mi"
-            - image: docker-remote.artifacts.developer.gov.bc.ca/fluent/fluent-bit:1.5.7
+            - image: artifacts.developer.gov.bc.ca/docker-remote/fluent/fluent-bit:1.5.7
               name: "${REPO_NAME}-fluent-bit-sidecar"
               imagePullPolicy: Always
               imagePullSecrets:
