--- a/tools/openshift/api.dc.yaml
+++ b/tools/openshift/api.dc.yaml
@@ -15,7 +15,7 @@ objects:
         app.openshift.io/runtime: spring-boot
       name: "${REPO_NAME}-dc"
     spec:
-      replicas: 2
+      replicas: 1
       revisionHistoryLimit: 1
       triggers: []
       selector:
@@ -68,11 +68,11 @@ objects:
                     name: api-grad-trax-db-secret
               resources:
                 requests:
-                  cpu: "25m"
-                  memory: "2048Mi"
+                  cpu: "${MIN_CPU}"
+                  memory: "${MIN_MEM}"
                 limits:
-                  cpu: "1500m"
-                  memory: "4096Mi"
+                  cpu: "${MAX_CPU}"
+                  memory: "${MAX_MEM}"
             - image: artifacts.developer.gov.bc.ca/docker-remote/fluent/fluent-bit:1.5.7
               name: "${REPO_NAME}-fluent-bit-sidecar"
               imagePullPolicy: Always
@@ -151,6 +151,24 @@ objects:
         name: "${REPO_NAME}"
         weight: 100
       wildcardPolicy: None
+  - apiVersion: autoscaling/v2beta2
+    kind: HorizontalPodAutoscaler
+    metadata:
+      name: "${REPO_NAME}-cpu-autoscaler"
+    spec:
+      scaleTargetRef:
+        apiVersion: apps.openshift.io/v1
+        kind: DeploymentConfig
+        name: "${REPO_NAME}-dc"
+      minReplicas: ${{MIN_REPLICAS}}
+      maxReplicas: ${{MAX_REPLICAS}}
+      metrics:
+        - type: Resource
+          resource:
+            name: cpu
+            target:
+              averageUtilization: 90
+              type: Utilization
 parameters:
   - name: REPO_NAME
     description: Application repository name
@@ -173,3 +191,21 @@ parameters:
     description: The path appended to the HOST_ROUTE where the root of this project will be served
     required: false
     value: "/"
+  - name: MIN_REPLICAS
+    description: The minimum amount of replicas
+    required: true
+  - name: MAX_REPLICAS
+    description: The maximum amount of replicas
+    required: true
+  - name: MIN_CPU
+    description: The minimum amount of cpu
+    required: true
+  - name: MAX_CPU
+    description: The maximum amount of cpu
+    required: true
+  - name: MIN_MEM
+    description: The minimum amount of memory
+    required: true
+  - name: MAX_MEM
+    description: The maximum amount of memory
+    required: true
