Added the flag to turn on to handle all students as non-graduated for data conversion.
Added the flag to turn on to handle all students as non-graduated for data conversion.

--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -110,6 +110,9 @@ cron:
 trax:
   update:
     enabled: ${ENABLE_TRAX_UPDATE}
+  get:
+    student-master-only:
+      enabled: ${ENABLE_GET_STUDENT_MASTER_ONLY}
 
 #Splunk LogHelper
 splunk:
