--- a/.github/workflows/deploy_test.yml
+++ b/.github/workflows/deploy_test.yml
@@ -14,12 +14,14 @@ env:
   APP_DOMAIN: ${{ secrets.APP_DOMAIN }}
   NAMESPACE: ${{ secrets.GRAD_NAMESPACE }}
   TAG: "latest"
+  #GRAD2-1947 Resource optimization
   MIN_CPU: "50m"
-  MAX_CPU: "200m"
+  MAX_CPU: "300m"
   MIN_MEM: "1024Mi"
-  MAX_MEM: "3072Mi"
+  MAX_MEM: "2200Mi"
   MIN_REPLICAS: "3"
   MAX_REPLICAS: "5"
+
 
 
 on:
