--- a/tools/openshift/api.dc.yaml
+++ b/tools/openshift/api.dc.yaml
@@ -143,12 +143,19 @@ objects:
         name: "${REPO_NAME}-dc"
       minReplicas: ${{MIN_REPLICAS}}
       maxReplicas: ${{MAX_REPLICAS}}
+      #GRAD2-1947 Resource optimization
       metrics:
         - type: Resource
           resource:
             name: cpu
             target:
-              averageUtilization: 600
+              averageUtilization: 500
+              type: Utilization
+        - type: Resource
+          resource:
+            name: memory
+            target:
+              averageUtilization: 200
               type: Utilization
 parameters:
   - name: REPO_NAME
