--- a/api/src/test/resources/application.yaml
+++ b/api/src/test/resources/application.yaml
@@ -70,13 +70,20 @@ cron:
   scheduled:
     process:
       events:
-        stan:
-          run: 0 0/5 * * * *
+        grad-to-trax:
+          run: 0 0/10 * * * *
+          lockAtLeastFor: PT1M
+          lockAtMostFor: PT4M
+        trax-to-grad:
+          run: 0 0/10 * * * *
+          lockAtLeastFor: PT1M
+          lockAtMostFor: PT4M
+      trigger-jobs:
+        read-trax-update:
+          run: 0 0/2 * * * *
           lockAtLeastFor: 800ms
           lockAtMostFor: 900ms
-      jobs:
-        stan:
-          run: 0 0/10 * * * *
+
 #Incremental Trax Update
 trax:
   update:
