--- a/api/src/test/resources/application.yaml
+++ b/api/src/test/resources/application.yaml
@@ -59,6 +59,10 @@ logging:
             logging: INFO
       hibernate: ERROR
 
+authorization:
+  user: batch-api
+  password: abc
+
 #NATS
 nats:
   url: test
@@ -99,6 +103,8 @@ splunk:
 
 #Endpoint properties
 endpoint:
+  keycloak:
+    getToken: https://soam-tools.apps.silver.devops.gov.bc.ca/auth/realms/master/protocol/openid-connect/token
   educ-school-api:
     get-school-by-mincode:
       url: https://school-api-75e61b-dev.apps.silver.devops.gov.bc.ca/api/v1/schools/%s
