GRAD2-2430: task is complete.
GRAD2-2430: task is complete.

--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -131,6 +131,9 @@ cron:
           lockAtLeastFor: ${CRON_SCHEDULED_TRIGGER_TRAX_UPDATES_LOCK_AT_LEAST_FOR}
           lockAtMostFor: ${CRON_SCHEDULED_TRIGGER_TRAX_UPDATES_LOCK_AT_MOST_FOR}
           threshold: ${CRON_SCHEDULED_TRIGGER_TRAX_UPDATES_THRESHOLD}
+      purge-old-records:
+        run: ${CRON_SCHEDULED_PURGE_OLD_RECORDS}
+        staleInDays: ${RECORDS_STALE_IN_DAYS}
 
 #Incremental Trax Update
 trax:
