--- a/api/src/test/resources/application.yaml
+++ b/api/src/test/resources/application.yaml
@@ -90,6 +90,9 @@ cron:
           lockAtLeastFor: 800ms
           lockAtMostFor: 900ms
           threshold: 100
+      purge-old-records:
+        run: 0 30 0 * * *
+        staleInDays: 90
 
 #Incremental Trax Update
 trax:
