--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -43,12 +43,12 @@ spring:
           jwk-set-uri: ${TOKEN_ISSUER_URL}/protocol/openid-connect/certs
       client:
         registration:
-          gradclient:
-            client-id: ${GRAD_CLIENT_NAME}
-            client-secret: ${GRAD_CLIENT_SECRET}
+          traxclient:
+            client-id: ${TRAX_CLIENT_NAME}
+            client-secret: ${TRAX_CLIENT_SECRET}
             authorization-grant-type: client_credentials
         provider:
-          gradclient:
+          traxclient:
             issuer-uri: ${TOKEN_ISSUER_URL}
             token-uri: ${TOKEN_ISSUER_URL}/protocol/openid-connect/token
 
