--- a/.github/workflows/build.from.release.branch.deploy.to.dev.yml
+++ b/.github/workflows/build.from.release.branch.deploy.to.dev.yml
@@ -28,6 +28,7 @@ env:
   MAX_MEM: "2200Mi"
   MIN_REPLICAS: "3"
   MAX_REPLICAS: "5"
+  SOAM_KC_REALM_ID: "master"
 
 on:
   # https://docs.github.com/en/actions/reference/events-that-trigger-workflows
@@ -134,6 +135,14 @@ jobs:
           ${{ env.BUSINESS_NAMESPACE }} \
           ${{ secrets.SPLUNK_TOKEN }} \
           ${{ vars.APP_LOG_LEVEL }}
+          
+          # UPDATE KC Client
+          curl -s https://raw.githubusercontent.com/bcgov/${{ env.REPO_NAME }}/${{ env.BRANCH }}/tools/config/update-kc-client.sh \
+          | bash /dev/stdin \
+          dev \
+          ${{ env.COMMON_NAMESPACE }} \
+          ${{ env.SOAM_KC_REALM_ID }} \
+          ${{ secrets.CLIENT_ID }}
 
           # Start rollout (if necessary) and follow it
           oc rollout latest dc/${{ env.SPRING_BOOT_IMAGE_NAME }} 2> /dev/null \
@@ -144,6 +153,6 @@ jobs:
 
       # now hit it with a zap scan
       - name: ZAP Scan
-        uses: zaproxy/action-api-scan@v0.1.0
+        uses: zaproxy/action-api-scan@v0.7.0
         with:
           target: 'https://${{ env.REPO_NAME }}-${{ env.OPENSHIFT_NAMESPACE }}.apps.silver.devops.gov.bc.ca/api/v1/api-docs'
