--- a/.github/workflows/build.from.main.branch.deploy.to.dev.yml
+++ b/.github/workflows/build.from.main.branch.deploy.to.dev.yml
@@ -135,7 +135,9 @@ jobs:
           dev \
           ${{ env.COMMON_NAMESPACE }} \
           ${{ env.SOAM_KC_REALM_ID }} \
-          ${{ secrets.CLIENT_ID }}
+          ${{ secrets.CLIENT_ID }} \
+          ${{ env.BRANCH }} \
+          ${{ env.REPO_NAME }}
 
           # Start rollout (if necessary) and follow it
           oc rollout latest dc/${{ env.SPRING_BOOT_IMAGE_NAME }} 2> /dev/null \
