--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -87,10 +87,12 @@ jobs:
           # UPDATE KC Client
           curl -s https://raw.githubusercontent.com/bcgov/${{ env.REPO_NAME }}/${{ env.BRANCH }}/tools/config/update-kc-client.sh \
           | bash /dev/stdin \
-          prod \
+          dev \
           ${{ env.COMMON_NAMESPACE }} \
           ${{ env.SOAM_KC_REALM_ID }} \
-          ${{ secrets.CLIENT_ID }}
+          ${{ secrets.CLIENT_ID }} \
+          ${{ env.BRANCH }} \
+          ${{ env.REPO_NAME }}
           
           # Start rollout (if necessary) and follow it
           oc rollout latest dc/${{ env.SPRING_BOOT_IMAGE_NAME }} 2> /dev/null \
