GRAD2-2637 - Cache institute api data into Redis

--- a/tools/openshift/api.dc.yaml
+++ b/tools/openshift/api.dc.yaml
@@ -71,6 +71,8 @@ objects:
                 - secretRef:
                     name: trax-client-secret
                 - secretRef:
+                    name: edx-grad-client-secret
+                - secretRef:
                     name: redis-cache-secret
               resources:
                 requests:
