--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -1,5 +1,6 @@
-#DB Properties
 spring:
+  #main:
+  #  allow-bean-definition-overriding: true
   jmx:
     enabled: false
   datasource:
@@ -114,12 +115,20 @@ resilience4j.retry:
 authorization:
   user: ${GRAD_CLIENT_NAME}
   password: ${GRAD_CLIENT_SECRET}
+  institute-api:
+    client-id: ${EDX_GRAD_CLIENT_NAME}
+    client-secret: ${EDX_GRAD_CLIENT_SECRET}
 
 #NATS
 nats:
   url: ${NATS}
   maxReconnect: ${NATS_MAX_RECONNECT}
   connectionName: GRAD-TRAX-API
+
+#Redis
+redis:
+  url: ${REDIS_URL}
+  port: ${REDIS_PORT}
 
 #Scheduler
 cron:
@@ -165,6 +174,17 @@ endpoint:
       url: ${EDUC_SCHOOL_API}api/v1/schools/%s
     get-all-schools:
       url: ${EDUC_SCHOOL_API}api/v1/schools
+  institute-api:
+    get-all-schools:
+      url: ${INSTITUTE_API_URL_ROOT}api/v1/institute/school
+    get-school-details-by-id:
+      url: ${INSTITUTE_API_URL_ROOT}api/v1/institute/school/%s
+    get-all-districts:
+      url: ${INSTITUTE_API_URL_ROOT}api/v1/institute/district
+    get-all-school-category-codes:
+      url: ${INSTITUTE_API_URL_ROOT}api/v1/institute/category-codes
+    get-all-school-funding-group-codes:
+      url: ${INSTITUTE_API_URL_ROOT}api/v1/institute/funding-group-codes
 
 # other properties
 props:
