--- a/.github/workflows/build.from.dev.branch.deploy.to.dev.yml
+++ b/.github/workflows/build.from.dev.branch.deploy.to.dev.yml
@@ -128,8 +128,7 @@ jobs:
           ${{ env.COMMON_NAMESPACE }} \
           ${{ env.BUSINESS_NAMESPACE }} \
           ${{ secrets.SPLUNK_TOKEN }} \
-          ${{ vars.APP_LOG_LEVEL }} \
-          ${{ secrets.STUDENT_ADMIN_URL_ROOT }}
+          ${{ vars.APP_LOG_LEVEL }}
           
           # OVERRIDE Configmaps
           curl -s https://raw.githubusercontent.com/bcgov/${{ env.REPO_NAME }}/${{ github.event.inputs.choice }}/tools/config/override-configmap-dev.sh \
@@ -140,8 +139,7 @@ jobs:
           ${{ env.COMMON_NAMESPACE }} \
           ${{ env.BUSINESS_NAMESPACE }} \
           ${{ secrets.SPLUNK_TOKEN }} \
-          ${{ vars.APP_LOG_LEVEL }} \
-          ${{ secrets.STUDENT_ADMIN_URL_ROOT }}
+          ${{ vars.APP_LOG_LEVEL }}
 
           # Start rollout (if necessary) and follow it
           oc rollout latest dc/${{ env.SPRING_BOOT_IMAGE_NAME }} 2> /dev/null \
