GRAD2-3298 - Update TRAX api deployment to use the latest secret for Redis

--- a/.github/workflows/build.from.main.branch.deploy.to.dev.yml
+++ b/.github/workflows/build.from.main.branch.deploy.to.dev.yml
@@ -124,7 +124,10 @@ jobs:
           ${{ env.BUSINESS_NAMESPACE }} \
           ${{ secrets.SPLUNK_TOKEN }} \
           ${{ vars.APP_LOG_LEVEL }} \
-          ${{ secrets.STUDENT_ADMIN_URL_ROOT }}
+          ${{ secrets.STUDENT_ADMIN_URL_ROOT }} \
+          ${{ secrets.REDIS_URL }} \
+          ${{ secrets.REDIS_PORT }} \
+          ${{ secrets.REDIS_USER }}
           
           # OVERRIDE Configmaps
           curl -s https://raw.githubusercontent.com/bcgov/${{ env.REPO_NAME }}/${{ env.BRANCH }}/tools/config/override-configmap-dev.sh \
